--- a/profile/templates/profile/expedition.html
+++ b/profile/templates/profile/expedition.html
@@ -27,10 +27,10 @@
   <div class="clearfix"></div>
 
   <div class="row">
-  <div class="col-md-12 col-sm-12 col-xs-12">
+  <div class="col-md-9 col-sm-9 col-xs-12">
     <div class="x_panel">
       <div class="x_title">
-        <h2>Gráfico</h2>
+        <h2>Perfil de carga<small>por expedición</small></h2>
         <div class="clearfix"></div>
       </div>
       <div class="x_content">
@@ -38,8 +38,26 @@
       </div>
     </div>
   </div>
-
-
+  <div class="col-md-3 col-xs-12 widget widget_tally_box">
+   <div class="x_panel fixed_height_390">
+      <div class="x_title">
+        <h2>Información de expedición</h2>
+        <div class="clearfix"></div>
+      </div>
+      <div class="x_content">
+        <div class="tile-stats">
+          <div class="icon"><i class="fa fa-bus"></i></div>
+          <div class="count" id="route"></div>
+          <h3 id="licensePlate"></h3>
+        </div>
+        <div class="tile-stats">
+          <p>Capacidad: <strong id="capacity"></strong></p>
+          <p>Hora de inicio: <strong id="timeTripInit"></strong></p>
+          <p>Hora de fin: <strong id="timeTripEnd"></strong></p>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
 {% endblock %}
 
@@ -50,6 +68,14 @@
 <script src="{% static "own/js/echartsTheme.js" %}"></script>
 <script>
 $(document).ready(function(){
+
+  function updateBusInfo(route, licensePlate, capacity, timeTripInit, timeTripEnd) {
+    $('#route').html(route + ' ');
+    $('#licensePlate').html(licensePlate);
+    $('#capacity').html(capacity);
+    $('#timeTripInit').html(timeTripInit);
+    $('#timeTripEnd').html(timeTripEnd);
+  }
 
   function loadChart(data){
     var echartBar = echarts.init(document.getElementById('main'), theme);
@@ -85,6 +111,8 @@ $(document).ready(function(){
       var timeTripInit = trip['info']['timeTripInit'];
       var timeTripEnd = trip['info']['timeTripEnd'];
     
+      updateBusInfo(route, licensePlate, capacity, timeTripInit, timeTripEnd);
+     
       // chart data
       var xAxisData = [];
       var stopName = [];
@@ -140,7 +168,7 @@ $(document).ready(function(){
         };
         series.push(serie);
       }
-      console.log(series);
+      
       var data = {
         legend: {
           data: yAxisDataName
