--- a/templates/base.html
+++ b/templates/base.html
@@ -29,7 +29,7 @@
         <div class="col-md-3 left_col">
           <div class="left_col scroll-view">
             <div class="navbar nav_title" style="border: 0;">
-              <a href="index.html" class="site_title"><i class="fa fa-dashboard"></i> <span>UOCT!</span></a>
+              <a href="index.html" class="site_title"><i class="fa fa-dashboard"></i> <span>Fondef!</span></a>
             </div>
 
             <div class="clearfix"></div>
