--- a/profile/templates/profile/expedition.html
+++ b/profile/templates/profile/expedition.html
@@ -478,8 +478,8 @@ $(document).ready(function(){
     echarts.util.each(trips, function (trip, id) {
       var data = [];
       var N_POINT =trip.yAxisData['loadProfile'].length;
-      //var max = Math.max(...trip.yAxisData['loadProfile']);
-      for (var i = 0; i <= N_POINT; i++) {
+      var max = Math.max(...trip.yAxisData['loadProfile']);
+      for (var i = 0; i < N_POINT; i++) {
         var x = i+1;
         var y = trip.yAxisData['loadProfile'][i];
         data.push([x, y]);
@@ -502,7 +502,7 @@ $(document).ready(function(){
         type: 'value',
         show: false,
         //min: -0.4,
-        //max: 1.4,
+        max: max + 20,
         gridIndex: count
       });
       var name = trip.expeditionId;console.log(name);
