--- a/templates/base.html
+++ b/templates/base.html
@@ -87,7 +87,7 @@
     <!-- NProgress -->
     <script src="{% static gentelella_static|add:"nprogress/nprogress.js" %}"></script>
     <!-- Custom Theme Scripts -->
-    <script src="{% static gentelella_static|add:"../build/js/custom.min.js" %}"></script>
+    <!-- <script src="{% static gentelella_static|add:"../build/js/custom.min.js" %}"></script> -->
 
     {# javascript block for specific css #}
     {% block js %}{% endblock %}
